For prism parser, do not update $_ from STDIN

Fixes [Bug #21635]